tests/compile_fail/invalid_align_attr.stderr
error: expected attribute arguments in parentheses: `align(...)`
 --> tests/compile_fail/invalid_align_attr.rs:7:7
  |
7 |     #[align]
  |       ^^^^^

error: expected a power of 2 u32 literal
 --> tests/compile_fail/invalid_align_attr.rs:9:13
  |
9 |     #[align()]
  |             ^

error: expected a power of 2 u32 literal
  --> tests/compile_fail/invalid_align_attr.rs:11:13
   |
11 |     #[align(invalid)]
   |             ^^^^^^^

error: expected a power of 2 u32 literal
  --> tests/compile_fail/invalid_align_attr.rs:13:14
   |
13 |     #[align(3)]
   |              ^
